chore: proyecto Sistema de Lotería completado y documentado ✅